# bridge-cards

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  LICENSE  README.md  build_and_copy_target.sh  package.json  tsconfig.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/actions/setup-anchor-env/: action.yml
.github/workflows/: docker-build.yml  rust-checks.yml
account-data-macro-derive/: Cargo.toml
account-data-macro-derive/src/: lib.rs
account-data-trait/: Cargo.toml
account-data-trait/src/: lib.rs
programs/bridge_cards/: Cargo.toml
programs/bridge_cards/src/: errors.rs  events.rs  lib.rs  state.rs
programs/bridge_cards/src/instructions/: add_or_update_merchant_debitor.rs  add_or_update_merchant_destination.rs  add_or_update_merchant_manager.rs  add_or_update_user_delegate.rs  close_account.rs  debit_user.rs  initialize.rs  mod.rs  update_admin.rs
scripts/: initialize.ts
tests/: Cargo.toml
tests/src/: add_or_update_merchant_debitor_tests.rs  add_or_update_merchant_destination_tests.rs  add_or_update_merchant_manager_tests.rs  add_or_update_user_delegate_tests.rs  close_account_tests.rs  debit_user_tests.rs  initialize_tests.rs  lib.rs  update_admin_tests.rs
tests/src/common/: mod.rs
