[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anchor-client = "0.31.0"
bincode = "2.0.1"
litesvm = "0.6.0"
litesvm-token = { version = "0.6.0", features = ["token-2022"] }
serde = "1.0.219"
solana-account = "2.2.1"
solana-program-test = "2.2.2"
solana-sdk = "2.2.1"
spl-associated-token-account-client = "2.0.0"
spl-token-2022 = "4.0.0"
tokio = { version = "1", features = ["full"] }
paste = "1.0"
bridge_cards = { path = "../programs/bridge_cards", features = ["local"] }
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
account-data-trait = { path = "../account-data-trait" }
account-data-macro-derive = { path = "../account-data-macro-derive" }
base64 = "0.22.1"

[lib]
path = "src/lib.rs"
